Use ".*/*.json" to find all hidden JSON files

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -18,4 +18,4 @@ jobs:
             npm-
 
       - run: npm install
-      - run: npx jsonlint -q '**/*.json' '.devcontainer/*.json'
+      - run: npx jsonlint -q "**/*.json" ".*/*.json"
