Add CloudFormation template validation

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -20,3 +20,15 @@ jobs:
       - run: npm install
       - run: npx jsonlint -q "**/*.json" ".*/*.json"
       - run: npx yaml-lint "**/*.yaml"
+
+  validate_cloudformation:
+      - uses: actions/checkout@v4
+
+      - env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+        run: |
+          for f in cloudformation/*; do
+            aws cloudformation validate-template --template-body "file://${f}"
+          done
