--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -22,6 +22,7 @@ jobs:
       - run: npx yaml-lint "**/*.yaml"
 
   validate_cloudformation:
+    steps:
       - uses: actions/checkout@v4
 
       - env:
