--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -18,4 +18,20 @@ jobs:
             npm-
 
       - run: npm install
-      - run: npx jsonlint -q "**/*.json" ".*/*.json"
+      - run: npx jsonlint
+      - run: npx yaml-lint "**/*.yaml"
+
+  validate_cloudformation:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_REGION: ${{ vars.AWS_REGION }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+        run: |
+          for f in cloudformation/*; do
+            aws cloudformation validate-template --template-body "file://${f}"
+          done
