Add web objects bucket (#4)

--- a/cloudformation/account-bootstrap.cf.yaml
+++ b/cloudformation/account-bootstrap.cf.yaml
@@ -8,7 +8,7 @@
 # Name the stack "httphostdev-bootstrap".
 
 AWSTemplateFormatVersion: 2010-09-09
-Description: httphost.dev bootstrap
+Description: httphost.dev account bootstrap
 
 Resources:
   # A managed policy that grants permission to deploy per-website
@@ -75,5 +75,12 @@ Resources:
               "Null":
                 # Pass if "httphost.dev:domain" is not null.
                 aws:RequestTag/httphost.dev:domain: false
+            Effect: Allow
+            Resource: "*"
+
+            # We can't restrict bucket creation by tag.
+          - Action:
+              - s3:CreateBucket
+              - s3:PutBucketTagging
             Effect: Allow
             Resource: "*"
