--- a/cloudformation/account-bootstrap.cf.yaml
+++ b/cloudformation/account-bootstrap.cf.yaml
@@ -47,6 +47,11 @@ Resources:
             Effect: Allow
             Resource: "*"
 
+          - Action:
+              - cloudfront:CreateOriginAccessControl
+            Effect: Allow
+            Resource: "*"
+
           # We'll add a "httphost.dev:domain" tag to the Hosted Zones that we
           # deploy, but Route 53 doesn't support tag-based condition keys to
           # restrict these APIs. 😢 One day, hopefully!
