--- a/cloudformation/account-bootstrap.cf.yaml
+++ b/cloudformation/account-bootstrap.cf.yaml
@@ -48,6 +48,7 @@ Resources:
             Resource: "*"
 
           - Action:
+              - cloudfront:CreateDistribution
               - cloudfront:CreateOriginAccessControl
             Effect: Allow
             Resource: "*"
