Require at least TLSv1.2_2021

--- a/cloudformation/website-regional.cf.yaml
+++ b/cloudformation/website-regional.cf.yaml
@@ -62,7 +62,7 @@ Resources:
         ViewerCertificate:
           AcmCertificateArn:
             Ref: CertificateArn
-          MinimumProtocolVersion: TLSv1
+          MinimumProtocolVersion: TLSv1.2_2021
           SslSupportMethod: sni-only
 
   OriginAccessControl:
