Add Origin Access Control bucket policy (#7)

--- a/cloudformation/website-regional.cf.yaml
+++ b/cloudformation/website-regional.cf.yaml
@@ -82,3 +82,22 @@ Resources:
   WebObjectsBucket:
     Type: AWS::S3::Bucket
     Properties: {}
+
+  OriginAccessControlBucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket:
+        Ref: WebObjectsBucket
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Action: s3:GetObject
+            Condition:
+              StringEquals:
+                AWS:SourceArn:
+                  Fn::Sub: arn:aws:cloudfront::${AWS::AccountId}:distribution/${Distribution}
+            Effect: Allow
+            Principal:
+              Service: cloudfront.amazonaws.com
+            Resource:
+              Fn::Sub: arn:aws:s3:::${WebObjectsBucket}/*
